testsuite/escript/errors/errors003-function-parameter-same-name-as-function.src
// reported in https://forums.polserver.com/viewtopic.php?f=54&t=6140
function foo( print )
  not_defined;
endfunction

foo( 4 );
